fixed some layout on small screen

--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,4 @@
-@media only screen and  (max-width: 1100px) {
+@media only screen and  (max-width: 1100px) and (min-width: 476px) {
     #restaurant-container, #reviews-container {
         display: block;
         border-bottom: 1px solid #d9d9d9;
@@ -35,5 +35,34 @@
 @media only screen and  (max-width: 690px) {
     #restaurant-hours{
         display:block;
+    }   
+}
+
+@media only screen and (max-width: 475px){    
+    .inside #map-container {
+        position:relative;
+        margin-top: 50px;     
+        width: 100%;
+        height: 350px;        
+    }
+
+    #breadcrumb{
+        width: calc(100% - 80px);
+    }
+
+    #restaurant-container{        
+        border-bottom: 1px solid #d9d9d9;
+        border-top: 1px solid #fff;
+        padding: 20px 40px 20px 10px;
+        width: 100%;        
+    }
+
+    #reviews-container{
+        width: 100%;
+    }
+
+    .inside #footer{
+        width: 100%;
+        padding: 25px 25px 25px 5px;      
     }
 }
